fix: sticky menu z-index

--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -4,7 +4,7 @@
     position: sticky;
     top: 0;
     background-color: #ffffff;
-    z-index: 1;
+    /*z-index: 1;*/
 }
 
 .header__top {
